# study

./: .gitignore  Makefile  README.md  english.md  guard.bat  index.md  vs2015(x64).bat  vs2017(x64).bat  工具软件.md  计时脚本.bat
HadoopDoc/: README.md
HadoopDoc/component/lookapp/: Read.md  look.py  look.sh
HadoopDoc/component/lookapp/webpython/: install.sh  scriptrun.py
HadoopDoc/component/lookapp/webpython/app/: data.py  look.py  views.py
HadoopDoc/component/yarn-monitor/: Read.md  checkpython.sh  collect.py  debugrun.py  initdb.py  install.sh  productrun.py
HadoopDoc/component/yarn-monitor/app/: __init__.py  data.py  database.py  views.py
HadoopDoc/component/yarn-monitor/app/templates/: apps.html  datatable.html  head.html  look.html  main.html  nm.html  rm.html  running.html  yarn.html
HadoopDoc/component/yarn-monitor/conf/: config.py
HadoopDoc/component/yarn-monitor/db/: applicationRecord.py  database.py  metricsRecord.py  nmRecord.py  rmRecord.py  tmp.py
HadoopDoc/component/yarn-monitor/lib/: log.py  util.py
HadoopDoc/doc/: Cloudera Manager分析.md  Hadoop的kerberos的实践部署.md  ansible.md  hue.md
HadoopDoc/doc/Flume/: 使用构建Flume1.3.0数据收集系统.md
HadoopDoc/doc/Hadoop/: IDH Intel发行的Hadoop封装.md  README.md  cdh-lzo.md  cm-rest-api.md  exception.md  hadoop-cmd.md  hadoop-install.md  hadoop-native.md  hadoop-net-topology.md  hbase-bulk-load.md  hive-lzo-bug-hiveinputformat.md  problems.md  rsyslog-omhdfs-hdfs.md  问题跟进.txt
HadoopDoc/doc/Hadoop/hadoop-params/: hadoop-params.md  hadoop_params.html
HadoopDoc/doc/Solr/: SolrCloud.md
HadoopDoc/install/: Cloudera Manager安装文档.md  ClouderaManager卸载.md  README.md  Tar包安装CDH4.1.1升级到CM4.6管理的CDH4.3文档说明.md  hosts_name.txt  myhadoop_install.sh
HadoopDoc/install/myhadoop-install/: CDH_configs_V2.py  CDH_configs_V4.py  Config_CDH_V2.py  Config_CDH_V4.py  README.md  add_node.py  install.sh  myhadoop.py  utils.py
HadoopDoc/install/myhadoop-install/cm_conf/: confs.py
HadoopDoc/install/myhadoop-install/cm_install/: check_env.py  install.py  install_prepare.py
HadoopDoc/utils/hadoop-ext/: pom.xml
HadoopDoc/utils/hadoop-ext/src/assemble/: include.xml
HadoopDoc/utils/roll_restart_node/: config.py  roll_restart_node.py
bigdata/spark/: step.md
cmake_sample/: .gitignore  CMakeLists.txt  CMake_vc10(x64).bat  CMake_vc10.bat  CMake_vc14(x64).bat  README.md  sln_with2015(x64).bat  vs2015.bat  vs2017(x64).bat  xxx_cmake_env(x64).bat  xxx_sln(x64).bat
cmake_sample/cmake/: FindCURL.cmake  FindGoogleTest.cmake  FindXDATA.cmake  Findpcap.cmake  Findpthread.cmake  FindrabbitMQ.cmake  Findsqlite3.cmake  config.cmake.in
cmake_sample/cmake/abseil/: CMakeLists.txt.in  DownloadAbseil.cmake
cmake_sample/plugins/: CMakeLists.txt
cmake_sample/plugins/bagplugin/: CMakeLists.txt  version.h
cmake_sample/plugins/imageplugin/: CMakeLists.txt
cmake_sample/plugins/pcapplugin/: CMakeLists.txt  version.h.in
cmake_sample/plugins/txtplugin/: CMakeLists.txt
cmake_sample/tests/: CMakeLists.txt  readme.md  testdata.h.in
cmake_sample/xclient/: CMakeLists.txt  alpha.md  readme.md  version.h.in  xclient.aps  xclient.qrc  xclient.rc
cmake_sample/xclient/ui/: LoginDialogBase.ui  UserAuthorityDialogBase.ui  createDbDialogBase.ui  dataseteditdialogbase.ui  deleteDbDialogBase.ui  downloaddialogbase.ui  fileeditdialogbase.ui  mainbase.ui  setServerUrlDialogBase.ui  uploaddialogbase.ui
cmake_sample/xdata/: CMakeLists.txt  alpha.md  export.h  export.inl  platform.h.in  readme.md  version.h.in
cmake_sample/xlog/: CMakeLists.txt  config.cpp  config.h  export.h
cmake_sample/xplugin/: CMakeLists.txt  export.inl  readme.md  version.h.in
cmake_sample/xthread/: CMakeLists.txt  XMutex.cpp  XMutex.h  XMutexLocker.cpp  XMutexLocker.h  XReadLocker.cpp  XReadLocker.h  XReadWriteLock.cpp  XReadWriteLock.h  XThread.h  XWriteLocker.cpp  XWriteLocker.h  version.h  version.h.in
cpp/: 未命名绘图.drawio
cpp/Qt/test/one/: one_cmake_env(x64).bat  one_sln(x64).bat
cpp/Qt/test/one/src/: CMakeLists.txt  application.cpp  application.h  main.cpp  mainwindow.cpp  mainwindow.h  statis_test1.cpp  statis_test1.h  statis_test2.cpp  statis_test2.h  statis_test3.cpp  statis_test3.h  t_one.ui  thread.cpp  thread.h  widget.cpp  widget.h
cpp/spdlog封装/: slf4cpp.hpp
cpp/template/xlog_app/: CMakeLists.txt
cpp/template/xlog_app/app/: CMakeLists.txt  main.cpp
cpp/template/xlog_app/cmake/: Findrapidxml.cmake
cpp/template/xlog_app/conf/: log.conf  log.xml
cpp/template/xlog_app/xlog/: CMakeLists.txt  config.cpp  config.h  export.h
hadoop/: Elastice search 的使用.docx  hadoop安全机制学习.docx  原生hadoop配置.md
hadoop/hadoop3.x/: CentOS7.4下部署hadoop3.1.1.md
hadoop/hadoop3.x/3.1.1/: core-site.xml  hadoop-env.sh  hdfs-site.xml  mapred-site.xml  workers  yarn-site.xml
hadoop/hadoop3.x/3.1.1/ntp/: ntp-m1.conf  ntp-s1.conf  ntp-s2.conf  runRemoteCmd.sh
java/log4j/: log4j.properties
java/log4j2_and_slf/: log4j2.xml  pom.xml
java/maven/: pom_内置打包.xml  pom_外置打包.xml
totalcmd/: Wincmd.ini  xuebb.bar  xuebb.br2
vim/: .vimrc  _vimrc  build_ycm_env.bat  gvim.bat  install.bat  readme.md  start_vim.bat
vim/.vim/: .ycm_extra_conf.py  vimwiki.conf
vim/nvim/.SpaceVim.d/: init.toml
vim/nvim/.SpaceVim.d/autoload/: xbbconfig.vim
vim/spacevim/.SpaceVim.d/: .netrwhist  init.toml
vim/spacevim/.SpaceVim.d/autoload/: xbbspacevim.vim
vim/win/: _vimrc
vs2017/: my_usual.vssettings
wiki/: CMake学习.md  CentOS学习.md  English practise.wiki  Linux学习.md  Test.wiki  bat.wiki  index.wiki  personal.md  qgis.wiki  swig学习.md  vim学习.md  我的日记.wiki  未命名绘图.drawio
wiki/diary/: 2018-08-03.wiki
wiki/html/: bat.html  index.html
wiki_html/: Test.html  index.html  qgis.html  我的日记.html
wiki_html/diary/: 2018-08-03.html
wiki_test/: test.wiki
wiki_work/: work.md  周报.md  日记.md  未命名绘图.drawio  绝非科技.md
wiki_work/diary/: 2019-07-07.md  2019-07-21.md  2019-07-22.md  2019-07-23.md  2019-07-29.md  2019-08-01.md  2019-08-06.md  2019-08-09.md  2019-08-15.md  2019-08-16.md  2019-08-19.md  2019-08-22.md  2019-08-29.md  2019-08-30.md  2019-09-02.md  2019-09-04.md  2019-09-06.md  2019-8-14.md
(+58 files in other folders)
