# XDATA release version
project(gisstore_cpp)

# CMake settings
cmake_minimum_required(VERSION 2.8.6)

# 设置模块查找位置
SET(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake ${CMAKE_MODULE_PATH})

# 依赖库 curl
FIND_PACKAGE(CURL REQUIRED)
IF(curl_FOUND)
    MESSAGE(STATUS ${CURL_LIBRARY})
    MESSAGE(STATUS ${CURL_INCLUDE_DIRS})
ENDIF()

FIND_PACKAGE(sqlite3 REQUIRED)
IF(sqlite3_FOUND)
    MESSAGE(STATUS ${sqlite3_LIBRARY})
    MESSAGE(STATUS ${sqlite3_INCLUDE_DIRS})
ENDIF()



#make 是的颜色输出
SET(CMAKE_COLOR_MAKEFILE ON)

# 编译器ID
MESSAGE(STATUS "Complier ID: ${CMAKE_CXX_COMPILER_ID}")

#
IF(MSVC)
    ADD_DEFINITIONS(-DNOMINMAX)
    IF(MSVC_VERSION LESS 1800)
        ADD_DEFINITIONS(-DINSTDTR) 
    ELSE()
    ENDIF()
ENDIF(MSVC)


#使用系统环境变量
#MESSAGE(STATUS "env: $ENV{OSGEO4W_ROOT}")

###########################################################
#指定所有生成对象的输出目录    
#${CMAKE_BINARY_DIR} 生成目录的根目录
#静态库输出目录 
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/Debug)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/Debug)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/Debug)

SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELWITHDEBINFO ${CMAKE_BINARY_DIR}/RelWithDebInfo)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO ${CMAKE_BINARY_DIR}/RelWithDebInfo)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELWITHDEBINFO ${CMAKE_BINARY_DIR}/RelWithDebInfo)

SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/Release)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/Release)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/Release)

SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_MINSIZEREL ${CMAKE_BINARY_DIR}/MinSizeRel)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_MINSIZEREL ${CMAKE_BINARY_DIR}/MinSizeRel)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY_MINSIZEREL ${CMAKE_BINARY_DIR}/MinSizeRel)

#projects 
ADD_SUBDIRECTORY(xdata)
#ADD_SUBDIRECTORY(xthread)
ADD_SUBDIRECTORY(xplugin)
ADD_SUBDIRECTORY(plugins)

option(BUILD_TESTS "Build tests" OFF)
IF(BUILD_TESTS)
ADD_SUBDIRECTORY(tests)
ENDIF(BUILD_TESTS)


option(BUILD_XCLIENT "Build xclient" OFF)
IF(BUILD_XCLIENT)
ADD_SUBDIRECTORY(xclient)
ENDIF(BUILD_XCLIENT)


