# CMake settings
cmake_minimum_required(VERSION 2.8.6)

# XDATA release version
project(gisstore_cpp)

# 设置模块查找位置
SET(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake ${CMAKE_MODULE_PATH})

# 使用cmake externalproject模块下载第三方库, 下载后再 target_link_libraries 引入依赖即可
include(cmake/abseil/DownloadAbseil.cmake)

#make 是的颜色输出
SET(CMAKE_COLOR_MAKEFILE ON)

# 编译器ID
MESSAGE(STATUS "Complier ID: ${CMAKE_CXX_COMPILER_ID}")

#使用系统环境变量
#MESSAGE(STATUS "env: $ENV{OSGEO4W_ROOT}")

###########################################################
#指定所有生成对象的输出目录    
#${CMAKE_BINARY_DIR} 生成目录的根目录
#静态库输出目录 
#SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/Debug)
#SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/Debug)
#SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/Debug)
#
#SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELWITHDEBINFO ${CMAKE_BINARY_DIR}/RelWithDebInfo)
#SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO ${CMAKE_BINARY_DIR}/RelWithDebInfo)
#SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELWITHDEBINFO ${CMAKE_BINARY_DIR}/RelWithDebInfo)
#
#SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/Release)
#SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/Release)
#SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/Release)
#
#SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_MINSIZEREL ${CMAKE_BINARY_DIR}/MinSizeRel)
#SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_MINSIZEREL ${CMAKE_BINARY_DIR}/MinSizeRel)
#SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY_MINSIZEREL ${CMAKE_BINARY_DIR}/MinSizeRel)

# CMakelists.txt源目录;  输出目录,不指定的则使用第一个目录; EXCLUDE_FROM_ALL 再ide中分组显示
#add_subdirectory(${CMAKE_BINARY_DIR}/abseil-src
#                 ${CMAKE_BINARY_DIR}/abseil-build
#                 EXCLUDE_FROM_ALL)

add_subdirectory(xdata )
add_subdirectory(xplugin)
add_subdirectory(plugins)

option(BUILD_TESTS "Build tests" OFF)
IF(BUILD_TESTS)
ADD_SUBDIRECTORY(tests)
ENDIF(BUILD_TESTS)


option(BUILD_XCLIENT "Build xclient" OFF)
IF(BUILD_XCLIENT)
ADD_SUBDIRECTORY(xclient)
ENDIF(BUILD_XCLIENT)


